syntax = "proto3";

option go_package = "service/adapter/post";

// ビルドコマンド
// protoc --proto_path=proto --go_out=. --go-grpc_out=. proto/post/*

service Post {
    rpc GetPost(GetPostRequest) returns (GetPostResponse) {}
}

message GetPostRequest {
    string post_id = 1;
}

message GetPostResponse {
    string post_id = 1;
    string content = 2;
}